local/sites/all/themes/sitetheme/css/comments.css
/* $Id: comments.css,v 1.2 2009/08/12 08:03:52 johnalbin Exp $ */

/**
 * @file
 * Comment Styling
 */


#comments /* Wrapper for the list of comments and its title */ {
  margin: 1em 0;
}

#comments-title /* Heading for the list of comments */ {
}

.comment /* Wrapper for a single comment */ {
  border:1px solid #E7E7E7;
  padding:20px 20px 10px 20px;
  margin-bottom:10px;
}

.comment-inner /* Additional wrapper for a single comment */ {
}

.comment-preview /* Preview of the comment before submitting new or updated comment */ {
}

.comment.new /* A new comment since the user last viewed the page. */ {
}

.comment.odd /* An odd-numbered comment in the list of comments */ {
}

.comment.even /* An even-numbered comment in the list of comments */ {
}

.comment.first /* The first comment in the list of comments */ {
}

.comment.last /* The last comment in the list of comments */ {
}

.comment-unpublished /* Unpublished comments */ {
  /* background-color: #fff4f4; */ /* Drupal core uses a #fff4f4 background */
}

.comment-unpublished div.unpublished /* The word "Unpublished" displayed underneath the content. See also the div.unpublished declaration in the nodes.css. */ {
}

.comment-published /* Published comments */ {
}

.comment-by-anon /* A comment created by an anonymous user */ {
}

.comment-by-author /* A comment created by the node's author */ {
}

.comment-mine /* A comment created by the current user */ {
}

.comment h3.title /* Comment title */ {
  display:inline;
}

.new /* "New" marker for comments that are new for the current user */ {
  color: #c00;
}

.comment .picture /* The picture of the comment author */ {
}

.comment .submitted /* The "posted by" information */ {
  display:inline;
}

.comment .content /* Comment's content wrapper */ {
}

.comment .user-signature /* The user's signature */ {
}

.comment ul.links /* Comment links. See also the ul.links declaration in the pages.css. */ {
}

.comment .comment-bottom ul.links
{
  margin:0;
}

ul.links .comment_reply
{
  float:right;
  text-transform:capitalize;
}

ul.links .comment_reply a
{
  color:#3399FF;
}

ul.links .flag-comment_abuse
{
  float:left;
}

.comment .comment-bottom
{
  background: transparent url(../images/osdc_dot4x4.png) top repeat-x;
  padding-top:10px;
  text-transform: capitalize;
}

.indented /* Nested comments are indented */ {
  /* margin-left: 25px; */ /* Drupal core uses a 25px left margin */
  margin-left:40px;
}

.preview .comment /* Preview of the comment before submitting new or updated comment */ {
  /* background-color: #ffffea; */ /* Drupal core uses a #ffffea background */
}

/* Vote up/down icons */

.vote-up-down-widget
{
  border:none;
  margin:0;
  padding:0;
}

.vote-up-act,
.vote-up-inact,
.vote-up-inact:hover,
.up-inact
 {
  background:transparent url(../images/icon-vote-up.png) no-repeat scroll 50% 0;
  float:left;
  padding:0 5px;
}

.vote-down-act, 
.vote-down-inact,
.vote-down-inact:hover, 
.down-inact 
{
  background:transparent url(../images/icon-vote-down.png) no-repeat scroll 50% 0;
  float:left;
  padding:0 5px;
}


.comment-picture-wrapper {
  width: 50px;
  float: left;	
}

.comment-meta-wrapper {
	float: right;
	width: 85%;
}

.comment .content {
	clear: both;
	padding-top: 5px;
}

.comment .submitted {
  display: block;
}

.indented .indented .indented{
  margin-left:0;
}


/* Badge Display for Text in Comments */
.comment .badge-role {
  width: 46px;
  height: 16px;
  background-color: #E1432B;
  color: white;
  font-family: sans-serif;
  font-size: 10px;
  font-weight: bold;
  padding: 2px;
  text-align: center;
}

.comment .badge-wrapper {
  display: inline;
}

.comment .badge-green {
  height: 16px;
  background-color: #8BAA4A;
  color: white;
  font-family: sans-serif;
  font-size: 10px;
  font-weight: bold;
  padding: 2px;
  text-align: center;
  float: left;
  margin-right: 3px;
}

.comment .badge-blue {
  height: 16px;
  background-color: #21284B;
  color: yellow;
  font-family: sans-serif;
  font-size: 10px;
  font-weight: bold;
  padding: 2px;
  text-align: center;
  float: left;
  margin-right: 3px;
}

